# libao-jack-plugin

patch/: 0001-jack-plugin.patch  0002-jack-plugin-src.patch  0003-rename-libjack.patch
src/plugins/jack/: Makefile.am  ao_jack.c  ao_jack_resample.c  ao_jack_resample.h
